Update translations + add global tags
lang_username, lang_user and lang_password are now global tags

--- a/modules-available/adduser/lang/de/template-tags.json
+++ b/modules-available/adduser/lang/de/template-tags.json
@@ -2,7 +2,5 @@
     "lang_confirmation": "Wiederholen",
     "lang_createUser": "Benutzer anlegen",
     "lang_fullName": "Vollst\u00e4ndiger Name",
-    "lang_password": "Passwort",
-    "lang_telephone": "Telefon",
-    "lang_username": "Benutzerkennung"
+    "lang_telephone": "Telefon"
 }
