--- a/modules-available/adduser/lang/en/template-tags.json
+++ b/modules-available/adduser/lang/en/template-tags.json
@@ -2,7 +2,5 @@
     "lang_confirmation": "Confirm Password",
     "lang_createUser": "Create User",
     "lang_fullName": "Full Name",
-    "lang_password": "Password",
-    "lang_telephone": "Telephone",
-    "lang_username": "Username"
+    "lang_telephone": "Telephone"
 }
