--- a/modules-available/adduser/lang/pt/template-tags.json
+++ b/modules-available/adduser/lang/pt/template-tags.json
@@ -2,7 +2,5 @@
     "lang_confirmation": "Confirmar Senha",
     "lang_createUser": "Criar Usu\u00e1rio",
     "lang_fullName": "Nome Completo",
-    "lang_password": "Senha",
-    "lang_telephone": "Telefone",
-    "lang_username": "Nome de Usu\u00e1rio"
+    "lang_telephone": "Telefone"
 }
