--- a/modules-available/main/lang/de/global-tags.json
+++ b/modules-available/main/lang/de/global-tags.json
@@ -9,9 +9,12 @@
     "lang_hours": "Stunde(n)",
     "lang_next": "Weiter",
     "lang_no": "Nein",
+    "lang_password": "Passwort",
     "lang_reset": "Zur\u00fccksetzen",
     "lang_save": "Speichern",
     "lang_today": "Heute",
+    "lang_user": "Benutzer",
+    "lang_username": "Benutzername",
     "lang_yes": "Ja",
     "lang_yesterday": "Gestern"
 }
