--- a/modules-available/main/lang/pt/global-tags.json
+++ b/modules-available/main/lang/pt/global-tags.json
@@ -7,8 +7,11 @@
     "lang_edit": "Editar",
     "lang_hours": "Hora(s)",
     "lang_next": "Pr\u00f3ximo",
+    "lang_password": "Senha",
     "lang_reset": "Limpar",
     "lang_save": "Salvar",
     "lang_today": "Hoje",
+    "lang_user": "User",
+    "lang_username": "Nome do Usu\u00e1rio",
     "lang_yesterday": "Ontem"
 }
