--- a/modules-available/session/lang/de/template-tags.json
+++ b/modules-available/session/lang/de/template-tags.json
@@ -4,9 +4,7 @@
     "lang_enter": "Anmeldung",
     "lang_login": "Anmelden",
     "lang_newPassword": "Neues Passwort",
-    "lang_password": "Passwort",
     "lang_register": "Registrieren",
     "lang_rememberID": "Angemeldet bleiben",
-    "lang_repeatPassword": "Passwort wiederholen",
-    "lang_username": "Benutzerkennung"
+    "lang_repeatPassword": "Passwort wiederholen"
 }
