[permissionmanager] Sanitize language tag names

--- a/modules-available/permissionmanager/lang/de/template-tags.json
+++ b/modules-available/permissionmanager/lang/de/template-tags.json
@@ -1,22 +1,22 @@
 {
-    "lang_Roles": "Rollen",
-    "lang_Users": "Nutzer",
-    "lang_Locations": "Räume",
+    "lang_roles": "Rollen",
+    "lang_users": "Nutzer",
+    "lang_locations": "Räume",
     "lang_addRole": "Rollen erteilen",
     "lang_removeRole": "Rollen entziehen",
     "lang_newRole": "Rolle anlegen",
-    "lang_Selected": "Ausgewählt",
-    "lang_Edit": "Bearbeiten",
-    "lang_Delete": "Löschen",
+    "lang_selected": "Ausgewählt",
+    "lang_edit": "Bearbeiten",
+    "lang_delete": "Löschen",
     "lang_removeCheck": "Sind Sie sich sicher, dass Sie diese Rolle entfernen wollen?",
     "lang_deleteCheck": "Sind Sie sich sicher, dass Sie diese Rolle löschen wollen?",
     "lang_emptyNameWarning": "Der Name der Rolle darf nicht leer sein!",
-    "lang_Name": "Name",
-    "lang_Cancel": "Abbrechen",
-    "lang_Save": "Speichern",
+    "lang_name": "Name",
+    "lang_cancel": "Abbrechen",
+    "lang_save": "Speichern",
     "lang_all": "alle",
     "lang_selected": "ausgewählte",
-    "lang_Permissions": "Rechte",
+    "lang_permissions": "Rechte",
     "lang_selectizePlaceholder": "Nach Rollen filtern...",
     "lang_searchPlaceholder": "Nach Rollen suchen...",
     "lang_moduleName": "Rechtemanager",
