--- a/modules-available/permissionmanager/lang/en/template-tags.json
+++ b/modules-available/permissionmanager/lang/en/template-tags.json
@@ -1,22 +1,22 @@
 {
-    "lang_Roles": "Roles",
-    "lang_Users": "Users",
-    "lang_Locations": "Locations",
+    "lang_roles": "Roles",
+    "lang_users": "Users",
+    "lang_locations": "Locations",
     "lang_addRole": "Grant Roles",
     "lang_removeRole": "Revoke Roles",
     "lang_newRole": "New Role",
-    "lang_Selected": "Selected",
-    "lang_Edit": "Edit",
-    "lang_Delete": "Delete",
+    "lang_selected": "Selected",
+    "lang_edit": "Edit",
+    "lang_delete": "Delete",
     "lang_removeCheck": "Are you sure you want to remove this role?",
     "lang_deleteCheck": "Are you sure you want to delete this role?",
     "lang_emptyNameWarning": "Role name can not be empty!",
-    "lang_Name": "Name",
-    "lang_Cancel": "Cancel",
-    "lang_Save": "Save",
+    "lang_name": "Name",
+    "lang_cancel": "Cancel",
+    "lang_save": "Save",
     "lang_all": "all",
     "lang_selected": "selected",
-    "lang_Permissions": "Permissions",
+    "lang_permissions": "Permissions",
     "lang_selectizePlaceholder": "Filter for roles...",
     "lang_searchPlaceholder": "Search for roles...",
     "lang_moduleName": "Permission Manager",
