[runmode] Do not allow re-assigning clients to new runmode if old mode doesn't support the generic editor
Doing so might leave some stale data in the old module, so we
better prevent it so the user has to manually remove the client
from the old runmode using the non-generic way (module specific)
first.

--- a/modules-available/runmode/lang/en/messages.json
+++ b/modules-available/runmode/lang/en/messages.json
@@ -5,5 +5,6 @@
     "machine-not-found": "Client {{0}} not found",
     "machine-not-runmode": "No special mode of operation configured for client {{0}}",
     "machine-removed": "Removed client {{0}}",
+    "machine-still-assigned": "Client {{0}} still set to mode {{1}}, not assigning new mode.",
     "module-hasnt-runmode": "Module {{0}} doesn't supply any special mode of operation"
 }
