--- a/modules-available/runmode/lang/de/messages.json
+++ b/modules-available/runmode/lang/de/messages.json
@@ -5,5 +5,6 @@
     "machine-not-found": "Rechner {{0}} nicht gefunden",
     "machine-not-runmode": "Rechner {{0}} hatte keinen speziellen Betriebsmodus aktiviert",
     "machine-removed": "Rechner {{0}} entfernt",
+    "machine-still-assigned": "Rechner {{0}} ist noch im Betriebsmodus {{1}}; ignoriert.",
     "module-hasnt-runmode": "Modul {{0}} bietet keine speziellen Betriebsmodi"
 }
