--- a/modules-available/statistics_reporting/lang/en/template-tags.json
+++ b/modules-available/statistics_reporting/lang/en/template-tags.json
@@ -14,6 +14,7 @@
     "lang_reportingDescription": "Help us improve bwLehrpool by automatically sending an anonymized statistics report once a week. If you want to check what data the report contains, you can download such a report for reference below.",
     "lang_reportingLabel": "Send anonymized usage statistics",
     "lang_sessions": "Sessions",
+    "lang_settings": "Settings",
     "lang_shortSessions": "Sessions < 60s",
     "lang_show": "Show",
     "lang_total": "Total",
