[permissionmanager] Tweak style, fix role filtering (and make it AND), minor cleanups

--- a/modules-available/permissionmanager/lang/de/template-tags.json
+++ b/modules-available/permissionmanager/lang/de/template-tags.json
@@ -1,24 +1,18 @@
 {
-    "lang_roles": "Rollen",
-    "lang_users": "Nutzer",
-    "lang_locations": "Räume",
     "lang_addRole": "Rollen erteilen",
-    "lang_removeRole": "Rollen entziehen",
-    "lang_newRole": "Rolle anlegen",
-    "lang_selected": "Ausgewählt",
-    "lang_edit": "Bearbeiten",
-    "lang_delete": "Löschen",
-    "lang_removeCheck": "Sind Sie sich sicher, dass Sie diese Rolle entfernen wollen?",
-    "lang_deleteCheck": "Sind Sie sich sicher, dass Sie diese Rolle löschen wollen?",
-    "lang_emptyNameWarning": "Der Name der Rolle darf nicht leer sein!",
-    "lang_name": "Name",
-    "lang_cancel": "Abbrechen",
-    "lang_save": "Speichern",
-    "lang_all": "alle",
-    "lang_selected": "ausgewählte",
-    "lang_permissions": "Rechte",
-    "lang_selectizePlaceholder": "Nach Rollen filtern...",
-    "lang_searchPlaceholder": "Nach Rollen suchen...",
+    "lang_addRoleHeading": "Neue Rolle hinzuf\u00fcgen",
+    "lang_deleteCheck": "Sind Sie sich sicher, dass Sie diese Rolle l\u00f6schen wollen?",
+    "lang_editRoleHeading": "Rolle bearbeiten",
+    "lang_locationAwareDesc": "Berechtigungen mit diesem Symbol k\u00f6nnen auf bestimmte R\u00e4ume\/Orte beschr\u00e4nkt werden. Alle anderen Berechtigungen sind unabh\u00e4ngig von den f\u00fcr diese Rolle ausgew\u00e4hlten Orten.",
+    "lang_locations": "R\u00e4ume",
     "lang_moduleName": "Rechtemanager",
-    "lang_roleEditor": "Rollen Editor"
+    "lang_name": "Name",
+    "lang_newRole": "Rolle anlegen",
+    "lang_permissions": "Rechte",
+    "lang_removeRole": "Rollen entziehen",
+    "lang_roles": "Rollen",
+    "lang_searchPlaceholder": "Nach Rollen suchen...",
+    "lang_selected": "ausgew\u00e4hlte",
+    "lang_selectizePlaceholder": "Nach Rollen filtern...",
+    "lang_users": "Nutzer"
 }
