--- a/modules-available/permissionmanager/lang/en/template-tags.json
+++ b/modules-available/permissionmanager/lang/en/template-tags.json
@@ -1,24 +1,18 @@
 {
-    "lang_roles": "Roles",
-    "lang_users": "Users",
-    "lang_locations": "Locations",
     "lang_addRole": "Grant Roles",
-    "lang_removeRole": "Revoke Roles",
-    "lang_newRole": "New Role",
-    "lang_selected": "Selected",
-    "lang_edit": "Edit",
-    "lang_delete": "Delete",
-    "lang_removeCheck": "Are you sure you want to remove this role?",
+    "lang_addRoleHeading": "Add new role",
     "lang_deleteCheck": "Are you sure you want to delete this role?",
-    "lang_emptyNameWarning": "Role name can not be empty!",
-    "lang_name": "Name",
-    "lang_cancel": "Cancel",
-    "lang_save": "Save",
-    "lang_all": "all",
-    "lang_selected": "selected",
-    "lang_permissions": "Permissions",
-    "lang_selectizePlaceholder": "Filter for roles...",
-    "lang_searchPlaceholder": "Search for roles...",
+    "lang_editRoleHeading": "Edit role",
+    "lang_locationAwareDesc": "Permissions with this symbol can be restricted to certain locations. All other permissions are independent of the locations selected for this role.",
+    "lang_locations": "Locations",
     "lang_moduleName": "Permission Manager",
-    "lang_roleEditor": "Role Editor"
+    "lang_name": "Name",
+    "lang_newRole": "New Role",
+    "lang_permissions": "Permissions",
+    "lang_removeRole": "Revoke Roles",
+    "lang_roles": "Roles",
+    "lang_searchPlaceholder": "Search for roles...",
+    "lang_selected": "selected",
+    "lang_selectizePlaceholder": "Filter for roles...",
+    "lang_users": "Users"
 }
