[statistics] Rename permissions a bit

--- a/modules-available/statistics/lang/de/permissions.json
+++ b/modules-available/statistics/lang/de/permissions.json
@@ -1,5 +1,5 @@
 {
-	"view": "Client Statistiken anschauen.",
-	"note": "Client Notizen speichern.",
-	"delete": "Client löschen."
+	"view": "Statistiken anschauen.",
+	"machine.note": "Anmerkungen zu einem Rechner speichern.",
+	"machine.delete": "Rechner löschen."
 }
