[exams] Simplify permissions, add some error messages

--- a/modules-available/exams/lang/de/permissions.json
+++ b/modules-available/exams/lang/de/permissions.json
@@ -1,5 +1,4 @@
 {
-	"exams.add": "Neues Examen hinzufügen.",
-	"exams.delete": "Examen löschen.",
-	"exams.edit": "Examen bearbeiten."
+	"exams.view": "Geplante Prüfungen sehen.",
+	"exams.edit": "Prüfungen anlegen/editieren/löschen."
 }
