[syslog] Permission checks when saving anonymization days

--- a/modules-available/syslog/lang/de/permissions.json
+++ b/modules-available/syslog/lang/de/permissions.json
@@ -1,3 +1,4 @@
 {
-	"view": "Client Log anschauen."
+    "configure-anonymization": "Einstellen, nach wie vielen Tagen die Nutzernamen in den Logs entfernt werden.",
+    "view": "Client Log anschauen."
 }
