--- a/modules-available/syslog/lang/en/permissions.json
+++ b/modules-available/syslog/lang/en/permissions.json
@@ -1,3 +1,4 @@
 {
-	"view": "View client log."
+    "configure-anonymization": "Configure after how many days any usernames will be removed from log files.",
+    "view": "View client log."
 }
