[dozmod] Move subpages to pages/, hide pages where user has no permission

--- a/modules-available/dozmod/lang/de/module.json
+++ b/modules-available/dozmod/lang/de/module.json
@@ -4,7 +4,7 @@
     "submenu_actionlog": "Aktions-Log",
     "submenu_expiredimages": "Abgelaufene VM-Versionen",
     "submenu_mailconfig": "Email-Konfiguration",
-    "submenu_runtime": "Limits und Standardwerte",
+    "submenu_runtimeconfig": "Limits und Standardwerte",
     "submenu_templates": "Textbausteine f\u00fcr E-Mails",
     "submenu_users": "Benutzer und Berechtigungen"
 }
