--- a/modules-available/dozmod/lang/en/module.json
+++ b/modules-available/dozmod/lang/en/module.json
@@ -4,7 +4,7 @@
     "submenu_actionlog": "action log",
     "submenu_expiredimages": "Expired VM versions",
     "submenu_mailconfig": "email configuration",
-    "submenu_runtime": "limits and defaults",
+    "submenu_runtimeconfig": "limits and defaults",
     "submenu_templates": "templates",
     "submenu_users": "users and permissions"
 }
