--- a/modules-available/rebootcontrol/lang/de/template-tags.json
+++ b/modules-available/rebootcontrol/lang/de/template-tags.json
@@ -1,12 +1,14 @@
 {
     "lang_authFail": "Authentifizierung fehlgeschlagen",
     "lang_client": "Client",
+    "lang_confirmNewKeypair": "Wirklich neues Schl\u00fcsselpaar erzeugen?",
     "lang_connecting": "Verbinde...",
     "lang_error": "Nicht erreichbar",
     "lang_genNew": "Neues Schl\u00fcsselpaar generieren",
     "lang_ip": "IP",
     "lang_location": "Standort",
     "lang_minutes": " Minuten",
+    "lang_newKeypairExplanation": "Sie k\u00f6nnen ein neues Schl\u00fcsselpaar erzeugen lassen. In diesem Fall wird das alte Schl\u00fcsselpaar verworfen, sodass alle zum jetzigen Zeitpunkt bereits gestarteten Rechner nicht mehr aus der Ferne bedient werden k\u00f6nnen, bis diese manuell neugestartet wurden.",
     "lang_off": "Aus",
     "lang_on": "An",
     "lang_online": "Online",
@@ -27,6 +29,5 @@
     "lang_shutdownCheck": "Wollen Sie die ausgew\u00e4hlten Rechner wirklich herunterfahren?",
     "lang_shutdownIn": "Herunterfahren in: ",
     "lang_status": "Status",
-    "lang_unselectall": "Alle abw\u00e4hlen",
-    "lang_user": "Nutzer"
+    "lang_unselectall": "Alle abw\u00e4hlen"
 }
