--- a/modules-available/rebootcontrol/lang/en/permissions.json
+++ b/modules-available/rebootcontrol/lang/en/permissions.json
@@ -1,5 +1,5 @@
 {
-	"shutdown": "Shutdown Client.",
-	"reboot": "Reboot Client.",
+	"action.shutdown": "Shutdown Client.",
+	"action.reboot": "Reboot Client.",
 	"newkeypair": "Generate new Keypair."
 }
