--- a/modules-available/locations/lang/de/messages.json
+++ b/modules-available/locations/lang/de/messages.json
@@ -3,6 +3,7 @@
     "invalid-location-id": "Ung\u00fcltige Orts-id: {{0}}",
     "location-deleted": "Location wurde gel\u00f6scht (Locations: {{0}}, Subnets: {{1}})",
     "location-updated": "Location {{0}} wurde aktualisiert",
+    "no-permission-location": "Keine Rechte f\u00fcr Ort {{0}}",
     "parameter-missing": "Fehlender Parameter: {{0}}",
     "subnets-created": "Subnetze angelegt: {{0}}",
     "subnets-deleted": "Subnetze gel\u00f6scht: {{0}}",
