--- a/modules-available/permissionmanager/lang/en/template-tags.json
+++ b/modules-available/permissionmanager/lang/en/template-tags.json
@@ -1,18 +1,20 @@
 {
     "lang_addRole": "Grant Roles",
     "lang_addRoleHeading": "Add new role",
-    "lang_deleteCheck": "Are you sure you want to delete this role?",
     "lang_editRoleHeading": "Edit role",
     "lang_locationAwareDesc": "Permissions with this symbol can be restricted to certain locations. All other permissions are independent of the locations selected for this role.",
     "lang_locations": "Locations",
     "lang_moduleName": "Permission Manager",
     "lang_name": "Name",
     "lang_newRole": "New Role",
+    "lang_numAssignedUsers": "Users with this role",
     "lang_permissions": "Permissions",
     "lang_removeRole": "Revoke Roles",
+    "lang_roleDeleteConfirm": "Are you sure you want to delete this role? Users currently assigned to this role will lose the according permissions.",
     "lang_roles": "Roles",
     "lang_searchPlaceholder": "Search for roles...",
     "lang_selected": "selected",
     "lang_selectizePlaceholder": "Filter for roles...",
-    "lang_users": "Users"
+    "lang_users": "Users",
+    "lang_view": "View"
 }
