--- a/modules-available/adduser/lang/en/messages.json
+++ b/modules-available/adduser/lang/en/messages.json
@@ -1,5 +1,8 @@
 {
+    "adduser-success": "User successfully added",
+    "db-error": "Database error: {{0}}",
+    "password-changed": "Password changed",
     "password-mismatch": "Password and password confirmation do not match",
-    "adduser-disabled": "Insufficient privileges to add more users",
-    "adduser-success": "User successfully added"
+    "user-edited": "User data has been updated",
+    "user-not-found": "User with ID {{0}} not found"
 }
