--- a/modules-available/adduser/lang/en/template-tags.json
+++ b/modules-available/adduser/lang/en/template-tags.json
@@ -1,6 +1,16 @@
 {
+    "lang_addUser": "Add user",
+    "lang_changeLoginHint": "You can change the login identifier used for logging in. This is only enabled for local acounts that are not linked to LDAP\/AD servers.",
+    "lang_changeOwnPasswordHint": "You can change your own password by clicking the \"change password\" button in the menu.",
+    "lang_changePassword": "Change password",
     "lang_confirmation": "Confirm Password",
     "lang_createUser": "Create User",
+    "lang_editUser": "Edit user",
+    "lang_email": "Email",
     "lang_fullName": "Full Name",
-    "lang_telephone": "Telephone"
+    "lang_login": "Login",
+    "lang_name": "Name",
+    "lang_phone": "Phone",
+    "lang_userManagement": "User management",
+    "lang_userlist": "User list"
 }
