--- a/modules-available/sysconfig/lang/en/template-tags.json
+++ b/modules-available/sysconfig/lang/en/template-tags.json
@@ -53,11 +53,11 @@
     "lang_helpHomeAttrText": "Here you can specify the name of the attribute on the Active Directory that contains the path of the home directory server. Usually this is \"homeDirectory\". If you leave this blank, the wiszard will try to determine the attribute name automatically. If home directories don't work, check the client log (Status->Client log) and the LDAP proxy log (Status->Server status).",
     "lang_helpModuleConfiguration": "Configuration modules are the building blocks from which a system configuration is created. Here you can create both generic modules by a wizard, as well as create completely custom modules (advanced Linux knowledge required).",
     "lang_helpSystemConfiguration": "The fundamental localization of the bwLehrpool system is done through a system configuration. These include aspects such as the authentication method for users (eg Active Directory, LDAP), printer configuration, home directories, etc. A system configuration is composed of one or more configuration modules, which can be managed in the panel next to this one.",
-    "lang_homeAttr": "Home attribute",
     "lang_homeAttributeExplanation": "Please select the attribute which holds the user's home directory.",
     "lang_homeFallback": "Home fallback",
     "lang_homedirHandling": "(Home) directory handling",
     "lang_inheritFromParentLoc": "Inherit from parent location",
+    "lang_ldapAttrMountOpts": "LDAP attribute containing mount options",
     "lang_ldapStarted": "The LDAP proxy has been launched",
     "lang_ldapText1": "Here you can create a configuration module to authenticate agains an LDAP server",
     "lang_ldapText2": "An LDAP-Proxy will be launched on this server. This means the LDAP-Server must be reachable from it. The client PCs in the labs however don't have to be able to talk to the LDAP server \u2013 they will use the proxy running on this server.",
@@ -72,6 +72,7 @@
     "lang_moduleConfiguration": "Module Configuration",
     "lang_moduleName": "Module Name",
     "lang_moduleTitle": "Title",
+    "lang_mountOptionsNote": "These settings are relevant for the MiniLinux and VMs containing non-Windows OSes. If you specify an LDAP user attribute, its contents will be used as mount options when mounting the user's home directory. If the attribute is not specified or its contents are empty, the mount attributes specified in the other field will be used. If you leave both fields empty, the clients will try to determine the options automatically.",
     "lang_name": "Name",
     "lang_newConfiguration": "New Configuration",
     "lang_newModule": "New Module",
@@ -99,6 +100,7 @@
     "lang_shareDomainNote": "The user name will be prefixed by the domain when trying to mount home directories (DOMAIN\\user). Usually this will be determined automatically, but you can always override it here.",
     "lang_shareDownloads": "Downloads",
     "lang_shareHomeDrive": "Home drive letter (Windows)",
+    "lang_shareHomeMountOpts": "Fixed mount options",
     "lang_shareMapCreate": "Create folders on network share if they don't exist",
     "lang_shareMedia": "My Music, Videos, Pictures",
     "lang_shareModeNote": "\"Native mode with fallback\" is experimental and known to cause temporary freezes with some VMs. Use with care.",
